--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name="org.dvorak.TempActivity"
-            android:label="@string/title_activity_temp"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-    </application>
+        android:theme="@style/AppTheme"></application>
 
 </manifest>
