--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,10 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
     compile 'com.google.android.gms:play-services:10.2.0'
+    compile 'com.android.support.constraint:constraint-layout:+'
+    compile 'com.android.support:customtabs:25.0.0'
+    testCompile 'junit:junit:4.12'
 }
