Code for Geofencing is there. Further testing is necessary to see if it works.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".MapDialog"></activity>
+        <service android:name=".GeofenceTransitionsIntentService"/>
     </application>
 
 </manifest>
