Starting to get some work done on the parking

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -40,12 +39,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-
         <activity
             android:name=".UpcomingEventsActivity"
             android:label="@string/title_activity_upcoming_events"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <service android:name=".GeofenceTransitionsIntentService" />
 
@@ -58,7 +55,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.dvorak.cbushackidea.MainActivity" />
         </activity>
-
+        <activity
+            android:name=".ParkingActivity"
+            android:label="@string/title_activity_parking">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.dvorak.cbushackidea.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
