--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,16 +22,17 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+
+
+
+
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:customtabs:25.0.0'
-
     compile 'com.github.sundeepk:compact-calendar-view:1.9.1'
-
-    compile 'com.android.support:cardview-v7:21.0.+'
-
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
     testCompile 'junit:junit:4.12'
-
 }
